--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "aiogram>=3.20.0.post0",
+    "python-dotenv>=1.1.0",
     "ultralytics>=8.3.139",
     "yolo>=0.3.1",
 ]
