--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BOT_TOKEN=7890096293:AAGuswx1UYSXKo4Q8u0hqVlzJAcp6y18M50
-MODEL=./weights/yolo11n.pt
+BOT_TOKEN = 8034390178:AAGsWxcxKHogFnL8FyMg8ZbLmT9rF9ZqzTU
+MODEL_PATH="./app/ml/weights/best.pt"
