--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,11 @@
 [project]
-name = "jaba"
+name = "skinbot"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.11"
 dependencies = [
     "aiogram>=3.20.0.post0",
     "python-dotenv>=1.1.0",
-    "ultralytics>=8.3.139",
-    "yolo>=0.3.1",
+    "ultralytics>=8.3.140",
 ]
